# d3sk-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
.docs/: Requirements.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: error.rs  main.rs
src/tools/: common.rs  mod.rs
src/tools/pc/: mod.rs
src/tools/web/: mod.rs
